--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "solid-js": "^1.9.5"
+    "@solidjs/router": "^0.15.3",
+    "@tailwindcss/vite": "^4.1.8",
+    "solid-js": "^1.9.5",
+    "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
     "vite": "^6.3.5",
