--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@solid-primitives/clipboard": "^1.6.1",
     "@solidjs/router": "^0.15.3",
     "@tailwindcss/vite": "^4.1.8",
     "solid-js": "^1.9.5",
