--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.13",
     "vite": "^6.3.5",
     "vite-plugin-solid": "^2.11.6"
   }
